@@ -9,19 +9,19 @@ use Socket;
 
 
 my @hints = qw(
+		198.41.0.4
+		192.228.79.201
 		192.33.4.12
 		199.7.91.13
 		192.203.230.10
 		192.5.5.241
 		192.112.36.4
-		128.63.2.53
+		198.97.190.53
 		192.36.148.17
 		192.58.128.30
 		193.0.14.129
 		199.7.83.42
 		202.12.27.33
-		198.41.0.4
-		192.228.79.201
 		);
 
 
